yaml-files/catalogue-service-deployment-new.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalogue-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: catalogue-service
  template:
    metadata:
      labels:
        app: catalogue-service
    spec:
      containers:
      - name: catalogue-service
        image: 602569698931.dkr.ecr.us-east-1.amazonaws.com/catalogue-service:v1
        ports:
        - containerPort: 5000
        volumeMounts:
        - mountPath: /app/data   # path inside the container where data will persist
          name: catalogue-storage
      volumes:
      - name: catalogue-storage
        persistentVolumeClaim:
          claimName: catalogue-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: catalogue-service
spec:
  selector:
    app: catalogue-service
  ports:
    - port: 5000
      targetPort: 5000
  type: ClusterIP
