yaml-files/catalogue-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalogue-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: catalogue-service
  template:
    metadata:
      labels:
        app: catalogue-service
    spec:
      containers:
      - name: catalogue-service
        image: docker.io/rajak2006/catalogue-service:latest
        ports:
        - containerPort: 5000
        readinessProbe:
          httpGet:
            path: /products   # existing route that returns 200
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 10
        resources:
          requests:
            cpu: "200m"
            memory: "256Mi"
          limits:
            cpu: "600m"
            memory: "512Mi"
        volumeMounts:
        - mountPath: /app/data   # path inside the container where data will persist
          name: catalogue-storage
      volumes:
      - name: catalogue-storage
        persistentVolumeClaim:
          claimName: catalogue-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: catalogue-service
spec:
  selector:
    app: catalogue-service
  ports:
    - port: 5000
      targetPort: 5000
  type: ClusterIP
